	 invalid custom data blocks (fixes bug #1757587).
20070720 test/test.c: factor out common code.
20070723 test/{loopend.tzx,test.c}: add test for bug #1758860 (stray TZX loop
	 end block causes segfault).
20070724 tape.c,test/{loop.tzx,test.c}: fix another aspect of bug #1758860 (TZX
	 loop blocks broken).
20070724 tape.c: fix stray TZX loop end block causes segfault (fixes bug
	 #1758860).
20070724 test/test.c: allow individual tests to be selected.
20070904 Makefile.am,generate.pl.in: allowing building in directories other
	 than the main source directory.
20070904 plusd.c: fix support for +D snapshots (fixes bug #1765021) (Stuart).
20070904 Makefile.am: rebuild make-perl when config.h is updated (Stuart).
20070905 Makefile.am: clean generated files on 'make clean' etc. (Stuart).
20070905 configure.in: add --disable-libaudiofile option (Stuart).
20070925 test/invalid-warajevo-blockoffset.tap: reduce to minimal testcase.
20070925 Makefile.am,test/{Makefile.am,complete-tzx.pl,edges.c,test.c,test.h,
	 test15.c}: add beginnings of test to check implementation of every
	 TZX block type.
20070926 test/{complete-tzx.pl,edges.c,test.h,test15.c}: add more block types
	 to the full TZX test.
20070926 test/{loop2.tzx,test.c}: add test for bug #1802607 (TZX loop blocks
	 still broken).
20070926 tape.c: fix bug #1802607.
20070926 test/{jump.tzx,test.c}: add test for bug #1802618 (TZX jump blocks
	 broken).
20070926 tape.c: fix bug #1802618.
20070926 test/{complete-tzx.pl,edges.c,test15.c}: add more block types to
	 the full TZX test.
20070926 test/test.c: factor out common code.
20070927 test/{complete-tzx.pl,test15.c}: and more block types to the full
	 TZX test.
20071006 csw.c: use memset() instead of bzero() for consistency (Stuart).
20071007 doc/libspectrum.txt,libspectrum.h.in,rzx.c: add functionality
	 required for updated rzxtool.
20071024 libspectrum.c: fix compilation on MorphOS (part of patch #1774492)
	 (Q-Master).