@@ -87,6 +87,10 @@ static timings_t base_timings[] = {
   { 3500000, 1750000, 24, 128, 24, 48, 47, 192, 48, 25, 32, 14336 },
   /* TS2068 */
   { 3528000, 1764000, 24, 128, 24, 48, 24, 192, 25, 21, 32,  9184 },
+  /* Pentagon 512K */
+  { 3584000, 1792000, 36, 128, 28, 32, 64, 192, 48, 16, 36, 17988 },
+  /* Pentagon 1024K */
+  { 3584000, 1792000, 36, 128, 28, 32, 64, 192, 48, 16, 36, 17988 },
 };
 
 libspectrum_dword
